# perceptr

./: .dockerignore  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  Caddyfile.local  DISCOVER_ENDPOINT_EXAMPLE.md  Dockerfile  LICENSE  README.md  SECURITY.md  __init__.py  database.py  docker-compose.prod.yml  docker-compose.yml  main.py  pyproject.toml  settings.py
.cursor/plans/: optimized_session_analyzer_d908a7fb.plan.md  session_analyzer_integration_1061c18b.plan.md
.github/workflows/: cicd-pipeline.yml  deploy-hostinger.yml  lint.yml
alembic/: env.py
alembic/versions/: 1ef682eaa6cd_add_recording_feilds_for_rrweb_and_.py  2614697fd003_init.py  867f634cc0e1_rrweb_session_analysis.py  faaf0152ef33_move_user_to_org.py  fdbc9dbbc03f_adjusted_recording_interval_time.py
app/: __init__.py  alembic.ini  clear_neo4j_indexes.py  database.py  logger.py  main.py  settings.py
app/alembic/: env.py
app/common/: enums.py  middleware.py  types.py
app/core/: constants.py
app/graphs/: discover_graph.py  issues_summarizer_graph.py  recording_analyzer_graph.py  recording_summarizer_graph.py  rrweb_recording_analyzer_graph.py  (+2 more)
common/: types.py
docs/: kg.md  linting.md
graphs/: issues_summarizer_graph.py  video_recording_analyzer_graph.py
models/: __init__.py  issue.py  issue_recording.py  recording_interval.py
rrweb/: compressor.py  keyframes.py  node_map.py  normalizer.py  patterns.py  replay.html
scripts/: __init__.py  benchmark_pipeline.py  setup-dev.sh  test_rrweb.ipynb  test_rrweb_video.ipynb
tests/: test_api.py
utils/: auth.py  brevo.py
(+152 files in other folders)
