[project]
name = "perceptr"
version = "0.1.0"
description = ""
authors = [
    {name = "abdelrahman",email = "asoliman@perceptr.io"}
]
readme = "README.md"
requires-python = ">=3.11,<=3.13.5"
dependencies = [
    "fastapi>=0.115.6,<0.116.0",
    "uvicorn>=0.34.0,<0.35.0",
    "langgraph>=0.2.62,<0.3.0",
    "langchain-openai>=0.3.0,<0.4.0",
    "pydantic>=2.10.5,<3.0.0",
    "pydantic-settings>=2.7.1,<3.0.0",
    "python-dotenv>=1.0.1,<2.0.0",
    "sqlalchemy>=2.0.37,<3.0.0",
    "psycopg-binary>=3.2.3,<4.0.0",
    "langsmith>=0.2.10,<0.3.0",
    "langfuse>=2.57.5,<3.0.0",
    "sqlalchemy-utils>=0.41.2,<0.42.0",
    "python-jose[cryptography]>=3.3.0,<4.0.0",
    "python-multipart>=0.0.9,<0.1.0",
    "email-validator>=2.1.0.post1,<3.0.0",
    "psycopg2-binary>=2.9.10,<3.0.0",
    "requests>=2.31.0,<3.0.0",
    "alembic>=1.14.0,<2.0.0",
    "langchain-google-genai>=2.0.8,<3.0.0",
    "langchain>=0.3.14,<0.4.0",
    "opencv-python>=4.10.0.84,<5.0.0.0",
    "boto3>=1.36.1,<2.0.0",
    "google-genai>=1.11.0,<2.0.0",
    "httpx>=0.28.1,<0.29.0",
    "python-json-logger>=3.3.0,<4.0.0",
    "reportlab>=4.4.2,<5.0.0",
    "bcrypt==5.0.0",
]
